objects/pi__AsyncRequest_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Settings for AsyncRequest Scheduling</description>
    <label>Public Setting for AsyncRequests</label>
    <fields>
        <fullName>pi__Is_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is Enabled</description>
        <inlineHelpText>Is Enabled</inlineHelpText>
        <label>Is Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Last_Run_Time__c</fullName>
        <description>The last time a given request was run.</description>
        <label>Last run time.</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__Next_Run_Time__c</fullName>
        <description>The next time a given request is scheduled to run.</description>
        <label>Next run time.</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__Result_Summary__c</fullName>
        <label>JSON summary of any results</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>